# CS205-CPP-Programming-Design

./: CS205 Project HCI presentation.pptx  README.md
code/: CMakeLists.txt  q1q2q3q5q6q7.cpp  q4.cpp
